src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>SuperflowAttachmentsType__c</fullName>
        <label>Superflow Attachments Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Attachments</fullName>
                    <default>true</default>
                    <label>General Attachments</label>
                </value>
                <value>
                    <fullName>Cross-Sell Attachments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Original_Record_ID__c</fullName>
        <description>The original note or attachment id this content version was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</description>
        <externalId>true</externalId>
        <inlineHelpText>The original note or attachment id this content version was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</inlineHelpText>
        <label>Original Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Original_Record_Owner_ID__c</fullName>
        <description>The owner id of the original Note that was converted into this new Note. This can be helpful in situations where old notes owned by inactive users are converted so you can track back to originally owned/created it. Inactive users can neither be the owner of a new Note nor have the new Note shared to them in ContentDocumentLink, so this field is the only audit trail especially if the old notes get deleted.</description>
        <externalId>true</externalId>
        <inlineHelpText>The owner id of the original Note that was converted into this new Note. Inactive users can neither be the owner of a new Note nor have the new Note shared to them, so this field is the only audit trail especially if the old notes get deleted.</inlineHelpText>
        <label>Original Record Owner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dca_cnvrt_file__Original_Record_Parent_ID__c</fullName>
        <description>The original note or attachment parent id this content version was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</description>
        <externalId>true</externalId>
        <inlineHelpText>The original note or attachment parent id this content version was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</inlineHelpText>
        <label>Original Record Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Superflow_Docs</fullName>
        <active>true</active>
        <label>Superflow Docs</label>
    </recordTypes>
</CustomObject>